syntax = "proto3";
option go_package = "proto;messenger";
package messenger;

service Messenger {
  rpc GetMessages (GetMessagesRequest) returns (stream GetMessagesResponse) {}
  rpc CreateMessage (CreateMessageRequest) returns (CreateMessageResponse) {}
}

message GetMessagesRequest {

}

message GetMessagesResponse{
  string message = 1;
}

message CreateMessageRequest {
  string message = 1;
}

message CreateMessageResponse {
  string message = 1;
}